# space-robot-dq

./: .gitignore  CHANGES_v0.3.0.md  CITATION.cff  LICENSE  README.md  pyproject.toml
benchmarks/: reference_fk.py  run_benchmarks.py
examples/: demo_momentum_conservation.py  generate_paper_figures.py
src/space_robot_dq/: __init__.py  control.py  dual_quaternion.py  dynamics.py  kinematics.py
tests/: test_control.py  test_dual_quaternion.py  test_dynamics.py  test_kinematics.py
